# MLServer

./: Dockerfile  Dockerfile.benchmark  Dockerfile.benchmark.haswell  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: prow-merge-release-to-staging.yml  requirements.yml  tests.yml
.tekton/: mlserver-pull-request.yaml  mlserver-push.yaml
docs-gb/: README.md  SUMMARY.md
docs-gb/examples/: README.md
docs-gb/examples/onnx/: linear-model.onnx
docs-gb/runtimes/: README.md  onnx.md
docs/examples/: index.md
docs/examples/onnx/: README.ipynb  README.md  inference-request.json  model-settings.json
docs/runtimes/: index.md  onnx.md
hack/: README-requirements-generation.md  generate-pinned-requirements.py  requirements-config.json
mlserver/: errors.py
runtimes/onnx/: README.md  pyproject.toml  tox.ini
runtimes/onnx/mlserver_onnx/: __init__.py  onnx.py  settings.py  utils.py
runtimes/onnx/tests/: __init__.py  conftest.py  test_configuration.py  test_error_handling.py  test_integration.py  test_model_lifecycle.py  test_multi_input.py  test_outputs.py  test_predictions.py  test_runtime.py  test_utils.py
runtimes/onnx/tests/testdata/: inference-request.json
runtimes/xgboost/mlserver_xgboost/: xgboost.py
